Next version
  - Tseng ET3000/ET4000: Update Status register 3DAh behavior when emulating
    Tseng chipsets to reflect Tseng datasheet, and VGAKIT SVGA detection code
    expectations. Bit 7 is expected, as documented by Tseng, to be the inverse
    of bit 3 (vertical retrace). Extended Start Register CRTC 33h must not
    allow setting the upper 4 bits because Tseng only documents the bottom
    four, and because VGAKIT requires it for Tseng detection (joncampbell123).
  - Fix bug that, for machine=hercules, prevented Hercules palette shortcut
    from changing colors when in graphics mode (joncampbell123).
  - Remove mixer and VGA capture test modes from integration device. Update
    integration device version number. Convert hardcoded magic constants used
    in IG into constants in iglib.h which is now shared explicitly with the
    iglib.h in DOSLIB. Add integration device interface to allow the guest
    to read and set the CPU cycle count of the emulator. (joncampbell123).
  - Fix INT 10h AH=0Eh bug where printing BEL triggered screen scroll up if
    cursor beyond the last line. Fix for the Elder Scrolls Arena installer.
    (joncampbell123).
  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
    INT 21h to find files named *.65 (such as STATES.65) with an attribute mask
    of 0xA (VOLUME LABEL | HIDDEN), ignore the VOLUME LABEL bit and scan
    normally. The 0xA value is leftover from a divide operation used to make
    the file name and is technically a bug in the game, though that happens
    to work on real MS-DOS and the DOSBox/DOSBox-X local folder support code
    anyway. This fix allows Elder Scrolls Arena to run from a mounted disk
    image. (joncampbell123).
  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
    INT 21h to find SAVEGAME.00 (yes, a specific name for some reason) with
    an attribute mask of 0x7C (which represents... um... what?), ignore the